--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Datebase properties
-spring.datasource.username=testfuser
-spring.datasource.password=testfpass
 spring.datasource.url=jdbc:mysql://localhost:3306/db_testf
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
